--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,36 @@
     --blackk: #0A0907;
     --minimal: 'Gravesend Sans';
     --royal: 'Mencken Std';
+
+
+
+
+    --blue: #007bff;
+    --indigo: #6610f2;
+    --purple: #6f42c1;
+    --pink: #e83e8c;
+    --red: #dc3545;
+    --orange: #fd7e14;
+    /* --yellow: #ffc107; */
+    --green: #28a745;
+    --teal: #20c997;
+    --cyan: #17a2b8;
+    --white: #fff;
+    --gray: #6c757d;
+    --gray-dark: #343a40;
+    --primary: #007bff;
+    --secondary: #6c757d;
+    --success: #28a745;
+    --info: #17a2b8;
+    --warning: #ffc107;
+    --danger: #dc3545;
+    --light: #f8f9fa;
+    --dark: #343a40;
+    --breakpoint-xs: 0;
+    --breakpoint-sm: 576px;
+    --breakpoint-md: 768px;
+    --breakpoint-lg: 992px;
+    --breakpoint-xl: 1200px;
     /* #7D441A */
 }
 
@@ -16,48 +46,66 @@
     box-sizing: border-box;
 }
 
-/* *:focus {
-    outline: 0 !important;
-} */
+*:focus {
 
-::-webkit-scrollbar {
-    width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    background: rgba(104, 83, 55);
+    outline: 5px solid #203321;
 
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: var(--dark-brown);
+
+a {
+    text-decoration: none;
+}
+
+header {
+    display: flex;
+    background-image: url("../img/Group\ 17.jpg");
+    justify-content: space-between;
+    height: 110px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    z-index: 999;
+
 
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: #1b0d01;
+header div {
+    width: auto;
+    display: flex;
+    margin-right: 80px;
+    align-items: center;
+    height: 85px;
+
 }
 
-::-moz-selection {
-    background: #831005;
+.hnav-point {
+    margin: 5px 25px;
+    font-size: 20px;
+    font-family: 'Segoe UI';
+    text-transform: uppercase;
+    color: #303030;
 }
 
-::selection {
-    background: #831005;
+.hnav-point:hover {
+    color: #101010
 }
 
+.bg-top {
+    width: 100%;
+    z-index: 400;
+    margin-top: -20px;
+    position: absolute;
+}
 
 .header-title {
-    background-color: var(--dark-blue);
-    width: 100%;
+
+    width: auto;
     height: 60px;
-    color: var(--yellow);
-    font-family: 'Times new roman';
+    text-transform: unset;
+    color: #707070;
+    font-family: 'Avalon';
     align-items: center;
-    display: flex;
+    margin-left: 50px;
     justify-content: center;
     font-size: 50px;
     letter-spacing: 1.5px;
@@ -65,30 +113,19 @@
     z-index: 5;
 }
 
-main {
-    /* background-color: var(--light-brown); */
+.fas {
+    margin-right: 5px;
+}
 
-    background: rgb(104, 83, 55);
-    background: radial-gradient(circle, rgba(104, 83, 55, 1) 0%, rgba(156, 126, 85, 1) 100%);
+main {
     width: 100%;
     height: 2000px;
     cursor: default;
+    background-color: #e2fae2;
+    z-index: -99999;
 }
 
-.headercompletor {
-    width: 100%;
-    height: 15px;
-    background-color: #020b1b;
-    color: var(--yellow);
-    font-family: var(--royal);
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    font-size: 50px;
-    letter-spacing: 1.5px;
-    box-shadow: 0px 3px 12px 3px rgba(2, 11, 27, 0.5);
-    z-index: 4;
-}
+
 
 .search-input {
     width: 130px;
@@ -98,19 +135,16 @@ main {
 }
 
 nav {
-
-    background: rgb(27, 13, 1);
-    background: linear-gradient(90deg, rgba(27, 13, 1, 1) 0%, rgba(43, 22, 4, 1) 100%);
+    background-color: #e2fae2;
     width: 200px;
     height: 1905px;
-    border-right: 4px solid var(--yellow);
-    color: var(--yellow);
-
+    border-right: 2px solid #909090;
+    color: #303030;
     padding-left: 30px;
     padding-top: 40px;
     position: absolute;
     left: 0px;
-    box-shadow: 1.5px 0px 12px 1px rgba(2, 11, 27, 0.2);
+    /* box-shadow: 1.5px 0px 12px 1px rgba(2, 11, 27, 0.2); */
 
 }
 
@@ -119,10 +153,11 @@ nav p {
     font-size: 22px;
     cursor: pointer;
     font-family: 'roboto';
+    color: #303030;
 }
 
 nav p:hover {
-    color: #7E623D;
+    color: #101010;
 
 }
 
@@ -137,15 +172,26 @@ nav p:hover {
 
 }
 
-h1 {
+.title {
     text-align: center;
-    color: var(--blackk);
+    color: #303030;
     font-family: roboto;
     text-transform: uppercase;
+
+    margin-top: -30px;
+}
+
+h1 {
+    text-align: center;
+    color: #303030;
+    font-family: roboto;
+    text-transform: uppercase;
+
+
 }
 
 h2 {
-    color: var(--blackk);
+    color: #303030;
     font-family: roboto;
     margin-top: 45px;
     font-size: 16px;
@@ -153,22 +199,23 @@ h2 {
 }
 
 .hr1 {
-    background-color: var(--blackk);
+    background-color: #303030;
     height: 3px;
     border: none;
     margin-bottom: 3px;
 }
 
 .hr2 {
-    background-color: var(--blackk);
+    background-color: #303030;
     height: 0.5px;
     border: none;
     margin-bottom: 40px;
+
 }
 
 .content-container p {
 
-    color: var(--blackk);
+    color: #303030;
     font-family: roboto;
     font-size: 16px;
     margin-top: 15px;
@@ -176,14 +223,10 @@ h2 {
 
 }
 
-a {
-    text-decoration: none;
-    color: var(--yellow);
-    font-family: var(--minimal);
-}
+
 
 table td {
-    border: 1px solid black;
+    border: 1px solid #303030;
     width: 150px;
 }
 
@@ -201,7 +244,7 @@ table td {
 @media screen and (max-width: 600px) {
     nav {
 
-        background-color: white;
+
         width: 300px;
         height: 100vh;
         left: -300px;
@@ -300,8 +343,6 @@ table td {
 
     }
 
-    .headercompletor {
-        height: 8px;
-    }
+
 
 }
